fix: updates to RBAC config on JWTUtil.java