@@ -28,12 +28,12 @@ public class JwtUtil {
     }
 
     public String createToken(User user) {
-        Claims claims = Jwts.claims().setSubject(user.getEmail());
+    Claims claims = Jwts.claims().setSubject(user.getEmail());
     Role role = user.getRole();
     if (role != null) {
-        claims.put("roles", List.of(role.getName())); 
+        claims.put("roles", List.of("ROLE_" + role.getName()));
     } else {
-        claims.put("roles", Collections.emptyList());
+        claims.put("roles", List.of("ROLE_" + role.getName()));
     }
         Date tokenCreateTime = new Date();
         Date tokenValidity = new Date(tokenCreateTime.getTime() + TimeUnit.MINUTES.toMillis(accessTokenValidity));
